<resources>
    <string name="app_name">To Do List</string>
    <string name="add_element_name">Dodaj element</string>
    <string name="null_json">Błąd pobierania danych. Sprawdź połączenie z Internetem i spróbuj ponownie.</string>
    <string name="try_again">Spróbuj ponownie</string>
    <string name="title">Treść:</string>
    <string name="choose_status">Wybierz status:</string>
    <string name="add">Dodaj</string>
    <string name="loadingData">Trwa wczytywanie danych, proszę czekać…</string>

    <string name="delete">Usuń</string>
    <string name="changeStatusToDone">Wykonano</string>
    <string name="changeStatusToComplete">Do Wykonania</string>
    <string name="multiChoiceMenuTitle">multi_choice_menu</string>

    <string name="buttonPositive">Zapisz</string>
    <string name="buttonNegative">Anuluj</string>

    <string name="labelFiltering">Filtracja:</string>
    <string name="labelSearch">Wyszukaj</string>
    <string name="contentDescription">TODO</string>
    <string name="labelID">ID użytkownika:</string>
    <string name="labelTitle">Tytuł:</string>

    <string-array name="add_status_array">
        <item>Do Wykonania</item>
        <item>Wykonano</item>
    </string-array>

    <string-array name="filtering_status_array">
        <item>Wszystkie</item>
        <item>Niezakończone</item>
        <item>Zakończone</item>
    </string-array>
</resources>
