<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.andoidsrc.popupmenu.MainActivity">

    <item
        android:id="@+id/popupMenu_item_status_to_completed"
        android:visible="true"
        android:title="@string/changeStatusToComplete"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/popupMenu_item_delete"
        android:title="@string/delete"
        android:visible="true"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/popupMenu_item_status_to_done"
        android:visible="true"
        android:title="@string/changeStatusToDone"
        app:showAsAction="ifRoom|withText" />
</menu>